# g4bench2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cmake  configure  version.h
.circleci/: config.yml
bench/: CMakeLists.txt  bench.sh  bench_all.sh  bench_score.sh
bench/plots/: multi-thread.ipynb  single-thread.ipynb
bench/plots/data/11.0.3/epyc_7643/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.0.3/i9-12900k/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.0.3/m1_ultra/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.0.3/ryzen_trpro_3995wx/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.0.3/xeon_gold_6336y/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.3.0/epyc_7643/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.3.0/epyc_9534/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.3.0/ryzen_7950x/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.3.0/ryzen_trpro_5995wx/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.3.0/ryzen_trpro_7985wx/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.3.0/xeon_6336y/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
bench/plots/data/11.3.0/xeon_6430/: ecal_e1000.json  hcal_p10.json  vgeo_x18.json
cmake/: version.h.in
cmake/Modules/: FindGeant4.cmake
common/: appbuilder.h  calscorer.cc  calscorer.h  eventaction.cc  eventaction.h  g4environment.cc  g4environment.h  particlegun.cc  particlegun.h  runaction.cc  runaction.h  simdata.h  stepaction.cc  stepaction.h
ecal/: CMakeLists.txt  appbuilder.cc  config.tmpl  ecalgeom.cc  ecalgeom.h  main.cc
hcal/: CMakeLists.txt  appbuilder.cc  config.tmpl  hcalgeom.cc  hcalgeom.h  main.cc
tests/: g4version.sh  test_ecal.sh  test_hcal.sh  test_vgeo_p200.sh  test_vgeo_x18.sh
util/: jsonparser.cc  jsonparser.h  stopwatch.cc  stopwatch.h  timehistory.cc  timehistory.h
vgeo/: appbuilder.cc  config.tmpl  main.cc  medicalbeam.cc  medicalbeam.h  phantom_pvp.cc  phantom_pvp.h  voxelgeom.cc  voxelgeom.h
